# practice_rename

lab1/task1/: CMakeLists.txt  task1.c
lab1/task2/: CMakeLists.txt  task2.c
lab1/task3/: CMakeLists.txt  task3.c
lab1/task4/: CMakeLists.txt  task4.c
lab1/task5/: CMakeLists.txt  task5_func.c  task5_main.c
lab1/task6/: CMakeLists.txt  task6_func.c  task6_main.c
lab1/task7/: CMakeLists.txt  func.h  task7_func.c  task7_main.c
lab1/task8/: CMakeLists.txt
lab2/: CMakeLists.txt
lab2/task1/: task1.c  task1.h
lab2/task2/: task2.c
lab2/task3/: CMakeLists.txt  task3.c
lab3/: CMakeLists.txt
lab3/do_while/: CMakeLists.txt  do_while.c
lab3/for/: CMakeLists.txt  for.c  main.c
lab3/while/: CMakeLists.txt  while.c
lab4/: CMakeLists.txt
lab4/task1/: task1.c  task1.h
lab4/task2/: task2.c
lab4/task3/: task3.c
lab4/task4/: task4.c
lab4/task6/: CMakeLists.txt  task6.c
lab6/: Zachetka.c
